--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/ylerjen/webComp/issues"
   },
-  "homepage": "https://github.com/ylerjen/webComp#readme"
+  "homepage": "https://github.com/ylerjen/webComp#readme",
+  "dependencies": {
+    "webcomponents.js": "^0.7.22"
+  }
 }
