--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,9 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# Dist folder for builded files
+# Build folders
 dist
+tmp
 
 # Sass cache folder
 .sass-cache
