--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-processhtml": "^0.4.0"
+    "load-grunt-tasks": "^3.5.0"
   }
 }
