--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "webcomponents.js": "^0.7.22"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.13.2",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "^2.2.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-copy": "^1.0.0",
