--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
+    "browser-sync": "^2.16.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "^2.2.0",
