--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A repository to try the actual WebComponents integration and support",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "grunt build",
+    "watch": "grunt dev"
   },
   "repository": {
     "type": "git",
