--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/ylerjen/webComp#readme",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "webcomponents.js": "^0.7.22"
   },
   "devDependencies": {
